--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>
+      <link href="main.css" rel="stylesheet"></link>
       <h3>Hola a todos </h3>
     </title>
   </head>
